# Practice_C-

./: BINARY_TO_DECIMAL.cpp  CHECK_VAL.cpp  CONVERT_BINARY_TO_OCT.cpp  DICEGAME.cpp  DICEPRINT.cpp  GOFLIFE.cpp  INTRO_PROGRAM.cpp  K_TRACK.cpp  LIST_TO_STRING.cpp  MATRIX01.cpp  MATRIX01_2_1.cpp  PASCALTRIANGLE.cpp  PROJ2_TASK1.txt  README.md  kTrack.cpp
CALC203/: calc203.cpp  calc203.h  main.cpp  readme.md
CALC203/src/: calc203.cpp  calc203.h
CHEM/: Molar_Molal.cpp
CHEM/LAB9/: main.cpp
CHEM/LAB9/src/: LAB9.cpp  LAB9.h
CHEM/POLYCHEM/: README.md  poly_main.cpp
CHEM/POLYCHEM/src/: polyatomic.cpp  polyatomic.h
HSET/: main.cpp  readme.md
IVERTEX/: main.cpp  readme.md
NodeHS/: CMakeLists.txt  main.cpp  readme.md
NodeHS/src/: CMakeLists.txt  NodeHS.cpp  NodeHS.h
NodeHS/test/: CMakeLists.txt  test.cpp
PASS256/: fpeek_main.cpp  readme.md  test1.txt
PASS256/src/: fpeek.cpp
SHALIST/: readme.md  test2.txt
SHALIST/header/pico_SHA2/: readme.md
SHALIST/src/: ShaList.cpp  ShaList.h
dataBaseSERIES/: K_TRACK.cpp  K_TRACK2.cpp  K_TRACK3.cpp  kTrack2_1.cpp  readme.md
filePeek/: fpeek_main.cpp  fpeek_main_test.cpp  test3.txt
filePeek/src/: fpeek.h
poly_chem/: README.md  poly_main.cpp  polyatomic.cpp  polyatomic.h  polyatomic_details.txt
